// Original file: ../proto/confirmation.proto

import type * as grpc from '@grpc/grpc-js'
import type { MethodDefinition } from '@grpc/proto-loader'
import type { SendPhoneNumberConfirmationRequest as _confirmation_SendPhoneNumberConfirmationRequest, SendPhoneNumberConfirmationRequest__Output as _confirmation_SendPhoneNumberConfirmationRequest__Output } from '../confirmation/SendPhoneNumberConfirmationRequest';
import type { SendPhoneNumberConfirmationResponse as _confirmation_SendPhoneNumberConfirmationResponse, SendPhoneNumberConfirmationResponse__Output as _confirmation_SendPhoneNumberConfirmationResponse__Output } from '../confirmation/SendPhoneNumberConfirmationResponse';
import type { VerifyPhoneNumberConfirmationRequest as _confirmation_VerifyPhoneNumberConfirmationRequest, VerifyPhoneNumberConfirmationRequest__Output as _confirmation_VerifyPhoneNumberConfirmationRequest__Output } from '../confirmation/VerifyPhoneNumberConfirmationRequest';
import type { VerifyPhoneNumberConfirmationResponse as _confirmation_VerifyPhoneNumberConfirmationResponse, VerifyPhoneNumberConfirmationResponse__Output as _confirmation_VerifyPhoneNumberConfirmationResponse__Output } from '../confirmation/VerifyPhoneNumberConfirmationResponse';

export interface ConfirmationServiceClient extends grpc.Client {
  SendPhoneNumberConfirmation(argument: _confirmation_SendPhoneNumberConfirmationRequest, metadata: grpc.Metadata, options: grpc.CallOptions, callback: grpc.requestCallback<_confirmation_SendPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  SendPhoneNumberConfirmation(argument: _confirmation_SendPhoneNumberConfirmationRequest, metadata: grpc.Metadata, callback: grpc.requestCallback<_confirmation_SendPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  SendPhoneNumberConfirmation(argument: _confirmation_SendPhoneNumberConfirmationRequest, options: grpc.CallOptions, callback: grpc.requestCallback<_confirmation_SendPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  SendPhoneNumberConfirmation(argument: _confirmation_SendPhoneNumberConfirmationRequest, callback: grpc.requestCallback<_confirmation_SendPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  sendPhoneNumberConfirmation(argument: _confirmation_SendPhoneNumberConfirmationRequest, metadata: grpc.Metadata, options: grpc.CallOptions, callback: grpc.requestCallback<_confirmation_SendPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  sendPhoneNumberConfirmation(argument: _confirmation_SendPhoneNumberConfirmationRequest, metadata: grpc.Metadata, callback: grpc.requestCallback<_confirmation_SendPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  sendPhoneNumberConfirmation(argument: _confirmation_SendPhoneNumberConfirmationRequest, options: grpc.CallOptions, callback: grpc.requestCallback<_confirmation_SendPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  sendPhoneNumberConfirmation(argument: _confirmation_SendPhoneNumberConfirmationRequest, callback: grpc.requestCallback<_confirmation_SendPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  
  VerifyPhoneNumberConfirmation(argument: _confirmation_VerifyPhoneNumberConfirmationRequest, metadata: grpc.Metadata, options: grpc.CallOptions, callback: grpc.requestCallback<_confirmation_VerifyPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  VerifyPhoneNumberConfirmation(argument: _confirmation_VerifyPhoneNumberConfirmationRequest, metadata: grpc.Metadata, callback: grpc.requestCallback<_confirmation_VerifyPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  VerifyPhoneNumberConfirmation(argument: _confirmation_VerifyPhoneNumberConfirmationRequest, options: grpc.CallOptions, callback: grpc.requestCallback<_confirmation_VerifyPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  VerifyPhoneNumberConfirmation(argument: _confirmation_VerifyPhoneNumberConfirmationRequest, callback: grpc.requestCallback<_confirmation_VerifyPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  verifyPhoneNumberConfirmation(argument: _confirmation_VerifyPhoneNumberConfirmationRequest, metadata: grpc.Metadata, options: grpc.CallOptions, callback: grpc.requestCallback<_confirmation_VerifyPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  verifyPhoneNumberConfirmation(argument: _confirmation_VerifyPhoneNumberConfirmationRequest, metadata: grpc.Metadata, callback: grpc.requestCallback<_confirmation_VerifyPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  verifyPhoneNumberConfirmation(argument: _confirmation_VerifyPhoneNumberConfirmationRequest, options: grpc.CallOptions, callback: grpc.requestCallback<_confirmation_VerifyPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  verifyPhoneNumberConfirmation(argument: _confirmation_VerifyPhoneNumberConfirmationRequest, callback: grpc.requestCallback<_confirmation_VerifyPhoneNumberConfirmationResponse__Output>): grpc.ClientUnaryCall;
  
}

export interface ConfirmationServiceHandlers extends grpc.UntypedServiceImplementation {
  SendPhoneNumberConfirmation: grpc.handleUnaryCall<_confirmation_SendPhoneNumberConfirmationRequest__Output, _confirmation_SendPhoneNumberConfirmationResponse>;
  
  VerifyPhoneNumberConfirmation: grpc.handleUnaryCall<_confirmation_VerifyPhoneNumberConfirmationRequest__Output, _confirmation_VerifyPhoneNumberConfirmationResponse>;
  
}

export interface ConfirmationServiceDefinition extends grpc.ServiceDefinition {
  SendPhoneNumberConfirmation: MethodDefinition<_confirmation_SendPhoneNumberConfirmationRequest, _confirmation_SendPhoneNumberConfirmationResponse, _confirmation_SendPhoneNumberConfirmationRequest__Output, _confirmation_SendPhoneNumberConfirmationResponse__Output>
  VerifyPhoneNumberConfirmation: MethodDefinition<_confirmation_VerifyPhoneNumberConfirmationRequest, _confirmation_VerifyPhoneNumberConfirmationResponse, _confirmation_VerifyPhoneNumberConfirmationRequest__Output, _confirmation_VerifyPhoneNumberConfirmationResponse__Output>
}
